--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -13,7 +13,7 @@ import TestWrapper from "../components/TestWrapper";
       To get started, open the directory <code>src/pages</code> in your project.<br />
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
     </p>
-    <ul role='list' class='link-card-grid'>
+    <ul role='list flex' class='link-card-grid'>
       <Card
         href='https://docs.astro.build/'
         title='Documentation'
