fix: add serverless login

--- a/apps/web/src/pages/login.astro
+++ b/apps/web/src/pages/login.astro
@@ -2,8 +2,9 @@
 // pages/login.astro
 
 import { auth } from "@packages/auth";
-console.log("xd");
-
+export const config = {
+  runtime: "serverless",
+};
 const authRequest = auth.handleRequest(Astro);
 
 // redirect to profile page if authenticated
