--- a/apps/web/src/pages/profile.astro
+++ b/apps/web/src/pages/profile.astro
@@ -2,7 +2,9 @@
 // pages/index.astro
 
 import { auth } from "@packages/auth";
-
+export const config = {
+  runtime: "serverless",
+};
 const authRequest = auth.handleRequest(Astro);
 const { user } = await authRequest.validateUser();
 
