fix: add servless until fix

--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
-import { Button } from "@packages/ui";
 import TestWrapper from "../components/TestWrapper";
+export const prerender = true;
 ---
 
 <Layout title='Welcome to Astro.'>
@@ -13,7 +13,7 @@ import TestWrapper from "../components/TestWrapper";
       To get started, open the directory <code>src/pages</code> in your project.<br />
       <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
     </p>
-    <ul role='list flex' class='link-card-grid'>
+    <ul role='list' class='link-card-grid'>
       <Card
         href='https://docs.astro.build/'
         title='Documentation'
